--- a/package.json
+++ b/package.json
@@ -9,12 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tabler/icons-react": "^3.28.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.18.1",
-    "mini-svg-data-uri": "^1.4.4",
     "motion": "^11.18.1",
     "next": "15.1.5",
-    "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
