--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-scroll": "^1.9.0",
     "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
